# blam.nvim

./: .gitignore  Cargo.toml  Plugin.toml  README.md  build.rs
lua/: blam.lua
src/: lib.rs
